Added address mapping decorator The decorator makes the destination email address opaque.

--- a/template.yml
+++ b/template.yml
@@ -13,6 +13,11 @@ Parameters:
     Default: ''
     Description: (Optional) Cross-origin resource sharing (CORS) Origin. You can specify a single origin, all "*" or leave empty and no CORS will be applied.
     MaxLength: 250
+  DestinationMapping:
+    Type: String
+    Default: '{"abc123":"destination@email.com"}'
+    Description: (Required) Mapping from 'FromEmail' to real e-mail addresses.
+    ConstraintDescription: 'Required. JSON String containing key -> email mapping.'
 Conditions:
   IsCorsDefined: !Not [!Equals [!Ref CorsOrigin, '']]
 Resources:
@@ -25,6 +30,7 @@ Resources:
         Variables:
           FROM_EMAIL: !Ref FromEmail
           CORS_ORIGIN: !Ref CorsOrigin
+          DESTINATION_MAPPING: !Ref DestinationMapping
       Policies:
         - SESCrudPolicy:
             IdentityName: !Ref FromEmail
